Fix keyboard shortcuts help visibility

--- a/thrimbletrimmer/src/restreamer/Restreamer.module.scss
+++ b/thrimbletrimmer/src/restreamer/Restreamer.module.scss
@@ -14,12 +14,6 @@
 	float: right;
 }
 
-.keyboardShortcutHelp {
-	position: absolute;
-	top: 0;
-	right: 0;
-}
-
 .videoLinks a {
 	margin: 2px;
 }
